[package]
name = "poc_logux"
version = "0.1.0"
authors = ["Anthony Griffon <anthony.griffon@iadvize.com>"]
description = "Just a poc right now"
homepage = "https://github.com/miaxos/poc-logtux"
repository = "https://github.com/miaxos/poc-logtux"
keywords = ["actix", "logtux", "redux", "event", "http"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "~0.8.3"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4"
chrono = "0.4.9"
colored = "1.8"
regex = "1"
